Rebrand to Sdiray: update app name, icon, splash, defaults

--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
@@ -1,5 +1,5 @@
 {
-  "Swashbuckler Diary": "侠客日记",
+  "Swashbuckler Diary": "Sdiary",
   "Word count unit": "字",
   "OK": "确认",
   "Cancel": "取消",
@@ -350,7 +350,7 @@
   "QQ wallet": "QQ钱包",
   "Wechat Payment": "微信支付",
   "Alipay": "支付宝",
-  "Support the development of Swashbuckler Diary": "支持 侠客日记 的开发",
+  "Support the development of Swashbuckler Diary": "支持 Sdiary 的开发",
   "Sponsor list": "捐助列表",
   "Thanks to the following sponsor": "感谢以下捐助",
   "Statistics": "统计",
@@ -415,7 +415,7 @@
   "Select weather": "选择天气",
   "Select mood": "选择心情",
   "Select file types": "选择文件类型",
-  "Swashbuckler diary feedback": "侠客日记反馈",
+  "Swashbuckler diary feedback": "Sdiary反馈",
   "Row": "行",
   "Col": "列",
   "Add table": "添加表格",
