--- a/src/SwashbucklerDiary.Maui/Platforms/Windows/Strings/de-DE/Resources.resw
+++ b/src/SwashbucklerDiary.Maui/Platforms/Windows/Strings/de-DE/Resources.resw
@@ -118,6 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AppDisplayName" xml:space="preserve">
-    <value>Tagebuch eines Schwertkämpfers</value>
+    <value>Sdiray</value>
   </data>
 </root>
